--- a/Website/index.html
+++ b/Website/index.html
@@ -113,7 +113,11 @@
                                     <div class="margin-top-60">
                           <a class="button button-style button-style-icon fa fa-long-arrow-right smoth-scroll" href="#portfolio">View Portfolio</a>
                                   </div>
-                                
+                                <ul class="intro-social">        
+                                     <li><a href="https://github.com/aaroncayabyab" target="_blank"><i class="fa fa-github"></i></a></li>
+                                     <li><a href="https://ca.linkedin.com/in/aaron-cayabyab" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                                     <li><a href="https://steamcommunity.com/id/a4pc" target="_blank"><i class="fa fa-steam"></i></a></li>
+                                  </ul>
                                 </div>
                             </div>
                         </div>
